feat: add simple tenant model
