# internal/params/data_model.go
@@ -4,4 +4,5 @@ type CreateDataModelParams struct {
 	ID         string
 	Identifier string
 	Name       string
+	TenantID   string
 }
